[tool.poetry]
name = "csvprint"
version = "0.7.1"
description = "Print csv files in columnated format, either plain or as a Markdown or LaTeX table"
authors = ["Vegard Stikbakke <vegard.stikbakke@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/vegarsti/csvprint"
homepage = "https://github.com/vegarsti/csvprint"
keywords = ['csv']

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
csvprint = "bin.csvprint:main"